--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -106,6 +106,7 @@
     <!-- 3.4 Output -->
     <section class="mb-5">
       <h3>4. Detection Output</h3>
+      <pre id="reduction" class="border bg-white p-3" style="min-height:100px;"></pre>
       <pre id="output" class="border bg-white p-3" style="min-height:200px;"></pre>
     </section>
   </div>
