--- a/observa/observa/templates/index.html
+++ b/observa/observa/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Observa - Detect Antipatterns</title>
+  <title>Observa - Anti-patterns Detection</title>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -16,7 +16,7 @@
   <div class="container py-5">
 
     <div class="d-flex justify-content-between align-items-center mb-4">
-      <h1 class="mb-0">Observa - Antipattern Detection</h1>
+      <h1 class="mb-0">Observa - Anti-patterns Detection</h1>
       <button id="clear-db-btn" class="btn btn-outline-danger btn-sm">🧹 Clear Database</button>
     </div>
 
@@ -156,7 +156,7 @@
               🔍 Search
             </button>
 
-            <canvas id="stackedBar" height="150"></canvas>
+            <canvas id="stackedBarHistory" height="150"></canvas>
 
           </div>
         </div>
