add filter date

--- a/observa/observa/templates/index.html
+++ b/observa/observa/templates/index.html
@@ -142,13 +142,25 @@
 
             <div class="row mb-3">
               <div class="col-md-6">
-                <label class="form-label">Choose a  DataSource</label>
+                <label class="form-label">Choose a DataSource</label>
                 <select id="history-filter-source" class="form-select"></select>
               </div>
 
               <div class="col-md-6">
                 <label class="form-label">Choose a Detector</label>
                 <select id="history-filter-detector" class="form-select"></select>
+              </div>
+            </div>
+
+            <div class="row mb-3">
+              <div class="col-md-6">
+                <label class="form-label">Start date</label>
+                <input id="history-start-date" type="datetime-local" class="form-control">
+              </div>
+
+              <div class="col-md-6">
+                <label class="form-label">End date</label>
+                <input id="history-end-date" type="datetime-local" class="form-control">
               </div>
             </div>
 
