update detection algorithm

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -73,8 +73,12 @@
           <label class="form-check-label" for="modeAverage">Based on average</label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="detectionMode" id="modeStat" value="stat">
-          <label class="form-check-label" for="modeStat">Statistical average</label>
+          <input class="form-check-input" type="radio" name="detectionMode" id="modeStat" value="zscore">
+          <label class="form-check-label" for="modeStat">Z-Score</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="detectionMode" id="modeStat" value="ewma">
+          <label class="form-check-label" for="modeStat">EWMA</label>
         </div>
         <div class="form-check">
           <input class="form-check-input" type="radio" name="detectionMode" id="modeMl" value="ml">
