--- a/observa/observa/templates/index.html
+++ b/observa/observa/templates/index.html
@@ -34,7 +34,7 @@
     <div class="container py-5">
       <div class="d-flex justify-content-between align-items-center mb-4">
         <img src="/static/atlab.png" alt="Logo" class="login-logo">
-        <h1 class="text-center" style="margin-left:-30px;">Observa - Framework</h1>
+        <h1 class="text-center" style="margin-left:-40px;">Observa - Framework</h1>
         <button id="logout-btn" class="btn btn-outline-secondary btn-sm">Logout</button>
       </div>
 
@@ -209,7 +209,12 @@ if __name__ == "__main__":
               <h4 class="card-title mb-3">2️⃣ Select or Add a Detector</h4>
 
               <div class="mb-3">
-                <label class="form-label">Select Existing Detector</label>
+                <label class="form-label">Select Anti-pattern</label>
+                <select id="antipattern-select" class="form-select"></select>
+              </div>
+
+              <div class="mb-3">
+                <label class="form-label">Select Detector</label>
                 <select id="detector-select" class="form-select" multiple size="4"></select>
               </div>
 
@@ -261,8 +266,10 @@ if __name__ == "__main__":
 
               <div class="mt-4">
                 <h5>Result:</h5>
-                <pre id="result-output" class="bg-light border p-3 rounded" style="min-height: 120px;"></pre>
+                <!--<pre id="result-output" class="bg-light border p-3 rounded" style="min-height: 120px;"></pre>-->
               </div>
+
+              <div id="visual-output" class="mt-3"></div>
             </div>
           </div>
         </div>
