add details in history

--- a/observa/observa/templates/index.html
+++ b/observa/observa/templates/index.html
@@ -312,6 +312,8 @@ if __name__ == "__main__":
 
               <canvas id="stackedBarHistory" height="150"></canvas>
 
+              <div id="visual-output2" class="mt-3"></div>
+
             </div>
           </div>
 
