--- a/observa/observa/templates/index.html
+++ b/observa/observa/templates/index.html
@@ -33,8 +33,10 @@
 
     <div class="container py-5">
       <div class="d-flex justify-content-between align-items-center mb-4">
-        <img src="/static/atlab.png" alt="Logo" class="login-logo">
-        <h1 class="text-center" style="margin-left:-40px;">Observa - Framework</h1>
+        <a href="/">
+          <img src="/static/atlab.png" alt="Logo" class="header-logo">
+        </a>
+        <h2 class="text-center" style="margin-left:-40px;">Observa - Framework</h2>
         <button id="logout-btn" class="btn btn-outline-secondary btn-sm">Logout</button>
       </div>
 
