--- a/observa/observa/templates/index.html
+++ b/observa/observa/templates/index.html
@@ -262,7 +262,7 @@ if __name__ == "__main__":
                   <input type="number" id="interval-seconds" class="form-control" value="10" min="1">
                 </div>
                 <div class="pt-3">
-                  <button id="auto-run-btn" class="btn btn-outline-primary">⏱️ Start Auto Run</button>
+                  <button id="auto-run-btn" class="btn btn-outline-primary">⏱️ Start Polling</button>
                 </div>
               </div>
 
